--- a/FlashMarketTesting/FlashMarketTesting.csproj
+++ b/FlashMarketTesting/FlashMarketTesting.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="tstCustomer.cs" />
+    <Compile Include="tstStaff.cs" />
     <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
